# sagegui

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  JOURNAL.md  MAINTENANCE.md  NOTES.md  PLAN.md  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build.yml  update-badges.yml
docs/: GLOSSARY.md
src/: main.rs  version.rs
