[package]
name = "sagegui"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
eframe = "0.29.0"
egui = "0.29.0"
rfd = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pinned to v0.15.0-beta.2 (commit d74024df)
sage-core = { git = "https://github.com/neely/sage.git", rev = "d74024df774054fa411a9d5cca6013ce91d26208" }
sage-cli = { git = "https://github.com/neely/sage.git", rev = "d74024df774054fa411a9d5cca6013ce91d26208" }
sage-cloudpath = { git = "https://github.com/neely/sage.git", rev = "d74024df774054fa411a9d5cca6013ce91d26208" }
timsrust = "0.4.1"
num_cpus = "1.13"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] }
env_logger = "0.11.5"

[profile.release]
lto = "thin"
codegen-units = 1
